--- a/Blog-Skeleton/Blog.UI.Tests/app.config
+++ b/Blog-Skeleton/Blog.UI.Tests/app.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <appSettings>
     <add key="URL" value="http://localhost:60634/Article/List/" />
     <add key="TestDataSheetPath" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog-Skeleton\Blog.UI.Tests\DataDrivenTests\" />
     <add key="Logs" value="C:\Users\eva3\Documents\Visual Studio 2015\Projects\Blog.Skeleton\Blog-Skeleton\Blog.UI.Tests\Logs\" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -18,4 +18,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
